--- a/frontend/.env.dev
+++ b/frontend/.env.dev
@@ -1,7 +1,7 @@
 NUXT_PUBLIC_BASE_URL=http://127.0.0.1:8000/
 NUXT_PUBLIC_API_URL=http://127.0.0.1:8000/api
 
-#STRIPE_SECRET_KEY=REDACTED
+STRIPE_SECRET_KEY=REDACTED
 STRIPE_PUBLISH_KEY=REDACTED
 
 # NUXT_PUBLIC_BASE_URL=https://api.elpirata.fr/ 
