--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,5 @@
-FROM node:20
+# ---- BUILD STAGE ----
+FROM node:20 AS builder
 
 WORKDIR /app
 
@@ -7,9 +8,19 @@ RUN npm install
 
 COPY . .
 
+RUN npm run build
+
+
+# ---- RUN STAGE ----
+FROM node:20 AS runner
+
+WORKDIR /app
+
+COPY --from=builder /app/.output ./.output
+
 ENV HOST=0.0.0.0
 ENV PORT=3000
 
 EXPOSE 3000
 
-CMD ["npm", "run", "dev"]
+CMD ["node", ".output/server/index.mjs"]
