--- a/el_pirata_api/Dockerfile
+++ b/el_pirata_api/Dockerfile
@@ -1,30 +1,37 @@
 FROM php:8.2-fpm
 
-# Installer les dépendances système
+# 1. Installer les dépendances système
+# Ajout de libpq-dev (PostgreSQL client library)
+# Suppression de sqlite3 et libsqlite3-dev
 RUN apt-get update && apt-get install -y \
     git curl zip unzip \
     libzip-dev \
-    sqlite3 libsqlite3-dev \
-    && docker-php-ext-configure zip \
-    && docker-php-ext-install pdo pdo_mysql pdo_sqlite zip
+    libpq-dev \
+    && rm -rf /var/lib/apt/lists/*
 
-# Installer Composer
+# 2. Installer les extensions PHP
+# Activation de pdo_pgsql (PostgreSQL)
+# Suppression de pdo_sqlite
+RUN docker-php-ext-configure zip \
+    && docker-php-ext-install pdo pdo_mysql pdo_pgsql zip
+
+# 3. Installer Composer
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 
-# Définir dossier de travail
+# 4. Définir dossier de travail
 WORKDIR /var/www
 
-# Copier les fichiers du projet
+# 5. Copier les fichiers du projet
 COPY . .
 
-# Installer dépendances PHP
+# 6. Installer dépendances PHP
 RUN composer install --no-interaction --prefer-dist --optimize-autoloader
 
-# Donner les permissions
+# 7. Donner les permissions
 RUN chown -R www-data:www-data storage bootstrap/cache
 
-# Exposer le port utilisé par Laravel
+# 8. Exposer le port utilisé par Laravel
 EXPOSE 8000
 
-# Lancer Laravel en mode serveur interne
+# 9. Lancer Laravel en mode serveur interne
 CMD ["php", "artisan", "serve", "--host=0.0.0.0", "--port=8000"]
