--- a/el_pirata_api/Dockerfile
+++ b/el_pirata_api/Dockerfile
@@ -25,4 +25,5 @@ RUN chmod -R 777 storage bootstrap/cache
 EXPOSE 8000
 
 # Démarrer l'application
-CMD ["php", "artisan", "serve", "--host=0.0.0.0", "--port=8000"]
+# Démarrer l'application (modifié pour utiliser le shell)
+CMD ["/bin/sh", "-c", "php artisan migrate --force && php artisan serve --host=0.0.0.0 --port=8000"]
