--- a/el_pirata_api/.env.example
+++ b/el_pirata_api/.env.example
@@ -1,32 +1,31 @@
-APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
-APP_URL=http://localhost
+# =========================================================
+# CONFIGURATION D'APPLICATION
+# Ces valeurs sont définies dans les variables Render
+# APP_ENV doit être 'production' pour la sécurité.
+# =========================================================
+APP_NAME="el_pirata"
+APP_ENV=production
+APP_KEY=base64:89Lby2dKGEfKe915dIiQDpd6FnTGJFSsQHGpjeMZyNk=
+APP_DEBUG=false
+APP_URL=https://backend-ubov.onrender.com 
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
-APP_MAINTENANCE_DRIVER=file
-# APP_MAINTENANCE_STORE=database
+# =========================================================
+# CONFIGURATION DE LA BASE DE DONNÉES (PostgreSQL)
+# Laissez ces variables pointées vers pgsql.
+# L'URL de connexion est fournie par la variable DATABASE_URL de Render
+# =========================================================
+DB_CONNECTION=pgsql
+# DB_HOST, DB_PORT, DB_DATABASE, DB_USERNAME, DB_PASSWORD ne sont pas nécessaires
+# car Laravel utilise DATABASE_URL si elle est définie (ce que fait Render).
 
-PHP_CLI_SERVER_WORKERS=4
-
-BCRYPT_ROUNDS=12
-
-LOG_CHANNEL=stack
-LOG_STACK=single
-LOG_DEPRECATIONS_CHANNEL=null
-LOG_LEVEL=debug
-
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
-
+# =========================================================
+# SESSIONS, CACHE, QUEUE
+# Laissez 'database' pour que la migration crée les tables.
+# =========================================================
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
@@ -40,13 +39,10 @@ QUEUE_CONNECTION=database
 CACHE_STORE=database
 # CACHE_PREFIX=
 
-MEMCACHED_HOST=127.0.0.1
-
-REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
-
+# =========================================================
+# MAIL/SERVICES EXTERNES
+# Laissez 'log' par défaut si vous n'avez pas de service email configuré.
+# =========================================================
 MAIL_MAILER=log
 MAIL_SCHEME=null
 MAIL_HOST=127.0.0.1
@@ -56,10 +52,4 @@ MAIL_PASSWORD=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-AWS_USE_PATH_STYLE_ENDPOINT=false
-
-VITE_APP_NAME="${APP_NAME}"
+# Le reste des services (Redis, AWS, etc.) reste inchangé si vous ne les utilisez pas.
