modif .env.example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,22 @@
-NUXT_PUBLIC_BASE_URL=http://127.0.0.1:8000/
-NUXT_PUBLIC_API_URL=http://127.0.0.1:8000/api
+# NUXT_PUBLIC_BASE_URL=http://127.0.0.1:8000/
+# NUXT_PUBLIC_API_URL=http://127.0.0.1:8000/api
+
+# NUXT_KEY_ENCRYPTION=52LkLH4vi4wVGveTH
+
+# # NUXT_PUBLIC_BASE_URL=https://api.elpirata.fr/
+# # NUXT_PUBLIC_API_URL=https://api.elpirata.fr/api
+
+#NUXT_PUBLIC_BASE_URL=http://127.0.0.1:8000/
+#NUXT_PUBLIC_API_URL=http://127.0.0.1:8000/api
+
+NUXT_PUBLIC_BASE_URL=https://backend-ubov.onrender.com/
+NUXT_PUBLIC_API_URL=https://backend-ubov.onrender.com/api
+
+
+
 
 NUXT_KEY_ENCRYPTION=52LkLH4vi4wVGveTH
 
 # NUXT_PUBLIC_BASE_URL=https://api.elpirata.fr/
 # NUXT_PUBLIC_API_URL=https://api.elpirata.fr/api
+
